syntax = "proto3";

package henkenclub.tempcontent.v1;

service Content {
  rpc CreateTempContent(CreateTempContentRequest)
		returns (CreateTempContentResponse);
}

message CreateTempContentRequest {
  enum TempContentType {
    UNKNOWN_UNSPECIFIED  = 0;
    AUTHOR = 1;
    BOOK = 2;
    BOOK_SERIES = 3;
  }

  string user_id = 1;
  string title = 2;
	TempContentType type = 3;
}

message CreateTempContentResponse {
  string content_id = 1;
}
